# CNN-Project

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: evaluate.yaml  predict.yaml  train.yaml  train_fast.yaml
notebooks/: CNNmodel.ipynb  modelCNN.h5
reports/: Project_Rationale.odt  Project_Rationale.txt  Project_Rationale_Academic.odt  Project_Rationale_Academic.txt  Python_Choices_Explanation.odt  Python_Choices_Explanation.txt  README.md  SRC_Dependency_Execution_Analysis.odt  SRC_Dependency_Execution_Analysis.txt  training_history.csv
src/: __init__.py
src/data/: dataset.py
src/features/: __init__.py  preprocess.py
src/utils/: config.py  logging_utils.py
tests/: test_config.py  test_preprocess.py
